2008-04-08  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/pygsource.c:
	* tests/test_source.py:
	Unbreak Source.prepare (#523075, Bryan Silverthorn)

2008-04-08  Johan Dahlin  <johan@gnome.org>

	* gio/gfile.override (_wrap__install_file_meta): Fix a couple of
	silly typos and use gio.File instead of GFile in exceptions.

2008-04-07  Johan Dahlin  <johan@gnome.org>

	* gio/__init__.py:
	* gio/gfile.override:
	* gio/gio-types.defs:
	* gio/gio.override:
	* tests/test_gio.py:
	Make gio.File() (calling on an interface) a factory for creating
	files. Add tests and a docstring.

2008-04-07  Johan Dahlin  <johan@gnome.org>

	* gio/Makefile.am (pygiodir): Install gio in the right location

2008-04-06  Johan Dahlin  <johan@gnome.org>

	* tests/test_gio.py: Add tests for recently added features.

	* gio/goutputstream.override: 
	(_wrap_g_output_stream_write_asyn,_wrap_g_output_stream_close_async): 
	* gio/ginputstream.override (async_result_callback_marshal_read): 
	Add wrappers.

	* gio/gio.override: Ignore vararg functions and remove a couple
	of left overs in the generic marshaller.

	* gio/gio.defs: Remove g_file_output_stream_truncate,
	g_file_output_stream_tell and g_file_input_stream_tell

	* Makefile.am:
	* gio/gfileenumerator.override (_wrap_g_file_enumerator_tp_iter): 
	Implement the python iteration protocol on GFileEnumerator

	* codegen/argtypes.py (arg): Add goffset to the int64 arg type

2008-04-02  Paul Pogonyshev  <pogonyshev@gmx.net>

	* gobject/pygenum.c: bug #428732
	(pyg_enum_new): Fix two wrong assertions about '__enum_values__'
	size and contents.
	(pyg_enum_reduce): New function (based on patch by Phil Dumont).
	(pyg_enum_methods): Hook it up.

2008-03-24  Paul Pogonyshev  <pogonyshev@gmx.net>

	* gobject/pygenum.c (pyg_enum_richcompare): Don't return NULL
	after warning; more useful warning message (bug #519631).

2008-03-22  Johan Dahlin  <johan@gnome.org>

	* gio/ginputstream.override:
	* gio/gio.override:
	* tests/test_gio.py:
