@@ -199,3 +199,16 @@ class TestVolumeMonitor(unittest.TestCase):
     def testGetMounts(self):
         mounts = self.monitor.get_mounts()
         self.failUnless(isinstance(mounts, list))
+
+
+class TestThemedIcon(unittest.TestCase):
+    def setUp(self):
+        self.icon = gio.ThemedIcon("open")
+
+    def testGetNames(self):
+        self.assertEquals(self.icon.get_names(), ['open'])
+
+    def testAppendName(self):
+        self.assertEquals(self.icon.get_names(), ['open'])
+        self.icon.append_name('close')
+        self.assertEquals(self.icon.get_names(), ['open', 'close'])
