@@ -1,5 +1,14 @@
 2008-04-08  Johan Dahlin  <jdahlin@async.com.br>
 
+	* gio/gio-types.defs:
+	* gio/gio.defs:
+	* gio/gio.override:
+	* tests/test_gio.py:
+	Add basic support for GThemedIcon, based on patch by
+	Thomas Leonard (#521883)
+
+2008-04-08  Johan Dahlin  <jdahlin@async.com.br>
+
 	* gobject/pygsource.c:
 	* tests/test_source.py:
 	Unbreak Source.prepare (#523075, Bryan Silverthorn)
